# Tec_Microprocesadores

./: .gitignore  CMakeLists.txt  README.md
02-11/: main.cu
03-09/: compare-methos.cpp  critical-section.cpp  events.cpp
07-09/: CMakeLists.txt  first_pthread.cpp  main.cpp
12-10/: howMany.cpp  sharedVar.cpp
15-10/: barrier_example.cpp  fast_pi.cpp  mutual_exclusion.cpp
22-10/: CMakeLists.txt
22-10/src/: main.cpp
24-09/: parallelPairAvg.cpp
27-08/: main.cpp
29-10/: main.cpp  main.cu
31-08/: main.cpp
Hw2/: ArgumentsCheck.cpp  ArgumentsCheck.h  CMakeLists.txt  MatrixAddition.cpp  Timer.cpp  Timer.h
Hw4/: main.cpp
Hw5/: main.cpp
Hw6/: CMakeLists.txt
Hw6/include/Timer/: Timer.cpp  Timer.h
Hw6/src/: main.cpp
Hw7/: main.cu
parcial1/: main.cpp
parcial3/: main.cpp
proyecto_final/: CMakeLists.txt  MatrixC.txt  MatrixCResult.txt  OldCMakeLists.txt
proyecto_final/include/ArgumentsCheck/: ArgumentsCheck.h
proyecto_final/include/GPUMatrix/: GPUMatrix.h
proyecto_final/include/MatrixCheck/: MatrixCheck.h
proyecto_final/include/MatrixMultiplier/: CUDAMultiplier.h  MatrixMultiplier.h  OMPMultiplier.h  PThreadMultiplier.h  SingleThreadMultiplier.h
proyecto_final/include/ScopeTimer/: ScopeTimer.h
proyecto_final/src/: ArgumentsCheck.cpp  CUDAMultiplier.cpp  GPUMatrix.cu  MatrixCheck.cpp  MatrixMultiplier.cpp  OMPMultiplier.cpp  PThreadMultiplier.cpp  ScopeTimer.cpp  SingleThreadMultiplier.cpp  main.cpp
